--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -128,21 +128,28 @@
                             </div>
                             <div class="card-body">
                                 <% for (let i = 0; i < 3; i++) { %>
-                                    <div class="cropper-container mb-4" id="image-container-<%= i %>">
-                                        <% if (i < product.productImage.length) { %>
-                                            <img class="rounded" style="width: 50px; height: 60px;" src="/uploads/product-images/<%= product.productImage[i] %>" alt="">
-                                            <button type="button" class="btn btn-danger btn-sm" onclick="deleteSingleImage('<%= product.productImage[i] %>', '<%= product._id %>', <%= i %>)">Remove</button>
-                                        <% } else { %>
-                                            <p>No image</p>
-                                        <% } %>
+                                    <div class="col-md-12">
+                                        <div class="mb-4">
+                                            <div class="cropper-container" id="image-container-<%= i %>">
+                                                <% if (i < product.productImage.length) { %>
+                                                    <img class="rounded" style="width: 50px; height: 60px;" src="/uploads/product-images/<%= product.productImage[i] %>" alt="">
+                                                    <button type="button" onclick="deleteSingleImage('<%= product.productImage[i] %>', '<%= product._id %>', <%= i %>)"><i class="fas fa-times"></i></button>
+                                                <% } else { %>
+                                                    <p>No image</p>
+                                                <% } %>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+
+                                    <div class="card-body align-items-center" style="margin-bottom: 20px;">
+                                        <img src="" alt="" id="imgView<%= i + 1 %>">
+                                        <input class="form-control" type="file" name="images<%= i + 1 %>" id="input<%= i + 1 %>" accept="image/png, image/jpeg, image/jpg" onchange="viewImage(event, <%= i + 1 %>)" <%= i < product.productImage.length ? 'disabled' : '' %>>
+                                        <div id="images-error<%= i + 1 %>" class="error-message"></div>
                                     </div>
                                     <div class="image-cropper" id="imageCropper<%= i + 1 %>">
                                         <img src="" alt="" id="croppedImg<%= i + 1 %>">
-                                        <button type="button" id="saveButton<%= i + 1 %>" class="btn btn-primary btn-sm">Save</button>
-                                    </div>
-                                    <div class="mb-3">
-                                        <input class="form-control" type="file" name="images<%= i + 1 %>" id="input<%= i + 1 %>" accept="image/png, image/jpeg, image/jpg" onchange="viewImage(event, <%= i + 1 %>)" <%= i < product.productImage.length ? 'disabled' : '' %>>
-                                        <div id="images-error<%= i + 1 %>" class="error-message"></div>
+                                        <button type="button" id="saveButton<%= i + 1 %>" class="btn-sm btn-primary">Save</button>
                                     </div>
                                 <% } %>
                             </div>
