--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -7,7 +7,7 @@
       font-size: 16px;
       font-weight: bold;
       color: #fff;
-      background-color: #ff6b6b;
+      background-color: #000000;
       border: none;
       border-radius: 5px;
       transition: background-color 0.3s, transform 0.3s;
@@ -165,10 +165,46 @@ img.img-fluid {
   .product-content-wrap a:hover {
       background-color: #ff4c4c;
   }
+   /* Custom CSS to control the video size */
+   .text_top{
+    padding: 10px;
+    text-align: center;
+    font-size: 36px;
+    color: #000000;
+    
+   }
+   .small_text_top{
+    font-size: 10px;
+    text-align: center;
+    padding-bottom: 10px;
+   }
+
 </style>
 
 
 <div class="container-fluid">
+  <div class="container-fluid">
+    <!-- Custom Video Container with increased height -->
+    <div class="custom-video-container row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-12">
+            <video  muted autoplay loop class="w-100">
+                <source src="/video/AIR MAX 97 __ Nike Ad (Unofficial) - Mudnag (1080p, h264, youtube).mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center"></div>
+    <h1 class="text_top"> <strong>TOP OF THE WISHLIST KICKS</strong></h1>
+    <h6 class="small_text_top">All-Time icons and sports-inspired gifts to make everyone on your list look and feel their best.</h6>
+    <div class="d-flex justify-content-center">
+      <a href="">
+          <button type="submit" class="btn btn-black btn-lg" style="width: 120px; border-radius: 25px;">Shop Now</button>
+      </a>
+  </div>
+    <br>
+</div>
+
+
   <div class="inner-sec-shop px-lg-4 px-3">
     <div class="row">
       <% products.forEach(product => { %>
@@ -328,6 +364,9 @@ img.img-fluid {
         open = false;
     });
 </script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
 	
